--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(SOURCE_FILES
 	src/Point3.cpp
 	src/Vector3.hpp
 	src/Vector3.cpp
+	src/Ray.hpp
+	src/Ray.cpp
 	src/Surface.hpp
 	src/Surface.cpp
 	src/Sphere.hpp
