add cameras to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ set(SOURCE_FILES
 	src/RGB.hpp
 	src/RGB.cpp
 	src/Light.hpp
+	src/Camera.cpp
+	src/Camera.hpp
+	src/Perspective.hpp
 )
 
 add_executable(raytracer ${SOURCE_FILES})
