--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ set(SOURCE_FILES
 	src/Camera.cpp
 	src/Camera.hpp
 	src/Perspective.hpp
+	src/Perspective.cpp
 )
 
 add_executable(raytracer ${SOURCE_FILES})
